# BehaviorTreeSwarmRobotics

./: CMakeLists.txt  CMakePresets.json  README.md  SwarmTree.xml  bt_demo copy.cpp  bt_demo.cpp  dumper.xml  dumperNodes.xml  finaltree.xml  tree.xml
ExtraXML/: DumperNodesSecondRobot.xml  treeSecondRobot.xml
